fix navbar-collapse border color

--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -26,4 +26,8 @@
       background-color: $dodger-blue;
     }
   }
+
+  .navbar-collapse {
+    border-color: $picton-blue;
+  }
 }
